--- a/index.html
+++ b/index.html
@@ -6,26 +6,60 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HTML5 AND CSS3</h1>
-   <h2>A Simple HTML5 WITHOUT CSS</h2>
-   <div style="margin-left: 40px;">
-    <a href="#">Home</a>
-   <a href="#">Advance features</a>
-   <a href="#">About </a>
-   <a href="#">contact</a>
-   <a href="#">Sign in</a>
-   <a href="#">Sign up</a>
-   </div>
-   <h2>A Simple HTML5 Page</h2>
-   <p>This is an example of a simple HTML5 webpage using some of its basic elements.</p>
-   <h2>CSS3 for Styling</h2>
-   <p>To make this webpage visually appealing we'll use some of the basic CSS3 code in another example. CSS Makes styling of the page more easy and convinient.</p>
-   <h3>Progress bar</h3>
-   <span>Progress you'll make</span>
-   <span>When you understand HTML5 code</span><input type="range"> <br>
-   <span>When you understand CSS3 code</span><input type="range" name="" id=""> <br>
-   <span>When you understand HTML5+CSS3 Code</span><input type="range" name="" id=""><br>
-   <mark>For more understandibility how css works this page doesn't include any CSS3 code.</mark>
-   <p>This is the modified example of the code taught by Colleen van Lent in her Introduction to CSS3 course on coursera.</p>
+    <p>This question is about HTML, CSS only.</p>
+    <p>Please do not use advance coding. This task is for beginners of HTML, CSS only.</p>
+    <mark>PLEASE MAKE SURE HTML CODE IS IN DIFFERENT PAGE AND CSS CODE IN ANOTHER PAGE AND HYPER LINK BOTH USING HREF</mark><br>
+    <mark style="color: red;">MOST IMPORTANT: DO NOT COPY CODES FROM SOMEWHERE AS IT WILL BE PLAGIARISED. Write the entire code yourself.</mark> <br> <br>
+    <h1>TASK: Create a registration form using HTML & CSS.</h1>
+    <div style="margin-left: 50px;">
+        <span>The form should get the following information:</span>
+    <ul>
+        <li>Name</li>
+        <li>Address</li>
+        <li>Email [validate email]</li>
+        <li>Password</li>
+        <li>Telephone number [if 1 load warning to enter country code</li>
+        <li>Birthdate [if age <13 load warning message, if >50 load help link]</li>
+        <li>Submit Button</li>
+    </ul>
+    </div>
+    <mark style="color: brown;">Please only make button in the form for the bullet points mentioned above. Do not add any extra buttons.</mark> <br>
+    <p>Copy and paste code here, also attach screenshots of outputs and inputs.</p>
+    <h2>Criteria:</h2>
+    <ul>
+        <li>CSS follows best practices
+        </li>
+        <li>CSS is reusable</li>
+        <ul>
+            <li>
+                CSS is not too dependent on the markup
+            </li>
+            <li>
+                Uses appropriate class names
+            </li>
+        </ul>
+    </ul>
+    <ul>
+        <li>HTML is semantic and accessible
+
+        </li>
+        <ul>
+            <li>Uses appropriate tags</li>
+            <li>
+                Meets validation and Google Lighthouse accessibility requirements
+            </li>
+        </ul>
+    </ul>
+    <ul>
+        <li>Responds to all Requirements: HTML is semantic, CSS is not dependent on markup sequence</li>
+        <li>Quality of framework developed: HTML matches accessibility requirements and uses appropriate tags</li>
+        <li>
+            
+            Quality of style: CSS uses appropriate class names and is not duplicated
+
+
+        </li>
+        <li>Originality: Form is original or attributed plus work done by student suitable to new domain</li>
+    </ul>
 </body>
 </html>
