--- a/index.html
+++ b/index.html
@@ -4,62 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 <body>
-    <p>This question is about HTML, CSS only.</p>
-    <p>Please do not use advance coding. This task is for beginners of HTML, CSS only.</p>
-    <mark>PLEASE MAKE SURE HTML CODE IS IN DIFFERENT PAGE AND CSS CODE IN ANOTHER PAGE AND HYPER LINK BOTH USING HREF</mark><br>
-    <mark style="color: red;">MOST IMPORTANT: DO NOT COPY CODES FROM SOMEWHERE AS IT WILL BE PLAGIARISED. Write the entire code yourself.</mark> <br> <br>
-    <h1>TASK: Create a registration form using HTML & CSS.</h1>
-    <div style="margin-left: 50px;">
-        <span>The form should get the following information:</span>
-    <ul>
-        <li>Name</li>
-        <li>Address</li>
-        <li>Email [validate email]</li>
-        <li>Password</li>
-        <li>Telephone number [if 1 load warning to enter country code</li>
-        <li>Birthdate [if age <13 load warning message, if >50 load help link]</li>
-        <li>Submit Button</li>
-    </ul>
+    <h1>hello World!</h1>
+    <hr>
+    <img src="dd.jfif" alt=""> <br>
+    <span>This is my first web page</span><br>
+    <br>
+    <span>I am Anilkumar Thalavi</span> <br>
+    <br>
+    
+    <b><ins>You can contact me in</ins></b> <br> <br>
+
+    <a href="#">LinkedIn</a> <br>
+    <a href="#">GitHub</a> <br>
+    <hr>
+    <h2>About me !</h2>
+    <p>I am like H₂O! I can modify with working conditions.</p>
+    <p>E = mc²</p>
+    <hr>
+    <p>problem solving!!</p>
+
+    <div style="font-size: 32px;">
+        <i class='bx bx-cart-add'></i>
+    <i class='bx bxs-cricket-ball' ></i>
     </div>
-    <mark style="color: brown;">Please only make button in the form for the bullet points mentioned above. Do not add any extra buttons.</mark> <br>
-    <p>Copy and paste code here, also attach screenshots of outputs and inputs.</p>
-    <h2>Criteria:</h2>
-    <ul>
-        <li>CSS follows best practices
-        </li>
-        <li>CSS is reusable</li>
-        <ul>
-            <li>
-                CSS is not too dependent on the markup
-            </li>
-            <li>
-                Uses appropriate class names
-            </li>
-        </ul>
-    </ul>
-    <ul>
-        <li>HTML is semantic and accessible
-
-        </li>
-        <ul>
-            <li>Uses appropriate tags</li>
-            <li>
-                Meets validation and Google Lighthouse accessibility requirements
-            </li>
-        </ul>
-    </ul>
-    <ul>
-        <li>Responds to all Requirements: HTML is semantic, CSS is not dependent on markup sequence</li>
-        <li>Quality of framework developed: HTML matches accessibility requirements and uses appropriate tags</li>
-        <li>
-            
-            Quality of style: CSS uses appropriate class names and is not duplicated
-
-
-        </li>
-        <li>Originality: Form is original or attributed plus work done by student suitable to new domain</li>
-    </ul>
+    <hr>
+    <b>I Anilkumar pursuing a computer science and Engineering at MLRTM</b> <br> 
+        <b>I am pro level debugger in programming</b>
 </body>
 </html>
